--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-img {
-    width: 50px;
+body {
+      border-style: solid;
+  background-image: url(http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ");
 }
 
