make css3 background

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body {
-      border-style: solid;
-  background-image: url(http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ");
+#sky {
+
+  background-image: url(http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg );
+ background-repeat: no-repeat;
+ background-size: cover;
 }
 
