--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-      border-style: solid;
+  border-style: solid;
+  border-color: #ff000;
   background-image: url(http://s0.geograph.org.uk/geophotos/01/92/71/1927137_2b88996d.jpg ");
 }
-
