--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 #sky {
- background: lightblue;
- background-repeat: no-repeat;
- background-size: cover;
+ background: linear-gradient(na, white); 
 }
 
 
@@ -50,4 +48,3 @@ h4 {
  text-shadow: 2px 2px white;
 }
  
- sup
