--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #sky {
- background: linear-gradient(na, white); 
+ background: linear-gradient(navy, white); 
 }
 
 
@@ -48,3 +48,4 @@ h4 {
  text-shadow: 2px 2px white;
 }
  
+ sup bro
